kubernetes-openshift/webservice-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webservice
spec:
  selector:
    app: webservice
  ports:
  - name: port
    protocol: TCP
    port: 8087
    targetPort: 8080
