kubernetes-openshift/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webservice
spec:
  hosts:
  - "*"
  gateways:
  - webservice-gateway
  http:
  - match:
    - uri:
        prefix: /docker-php/
    route:
    - destination:
        port:
          number: 8087
        host: webservice
